--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Apologenetics
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Q0sOmQb5zx45HGLdJ9rbYaHmXPPUBmm12YVSRIGBi18=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=scripture_database_laravel2
+DB_DATABASE=apologenetics_db
 DB_USERNAME=root
 DB_PASSWORD=
 
